--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -9,22 +9,22 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     min-height: 100vh;
     width: 100vw;
     background-color: #0b0511;
-    display:flex;
+    display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
 }
 
-.nav{
+.nav {
     font-weight: 700;
     color: #fff;
 }
 
-.main{
+.main {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -32,16 +32,16 @@ body{
 }
 
 .box__number,
-.box__list{
+.box__list {
     height: 400px;
     width: 450px;
     background-color: #ffff;
     border-radius: 10px;
     margin: 15px;
-    
+
 }
 
-.box__number{
+.box__number {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -49,12 +49,12 @@ body{
     padding: 20px;
 }
 
-.box__input{
+.box__input {
     width: 400px;
     height: 45px;
     border-radius: 10px;
     background-color: #1F1E21;
-    border:none;
+    border: none;
     outline: none;
     text-align: center;
     color: #fff;
@@ -62,41 +62,41 @@ body{
     font-size: 15px;
 }
 
-.number__alert{
+.number__alert {
     color: red;
     font-weight: 700;
 }
 
-.add__button{
+.add__button {
     width: 120px;
     height: 35px;
     background-color: #1F1E21;
     border-radius: 10px;
     color: #fff;
     font-weight: 800;
-    border:none;
+    border: none;
     cursor: pointer;
-    
+
 }
 
-.box__list{
+.box__list {
     padding: 20px;
     overflow-y: scroll;
-    
+
 }
 
-.box__result{
+.box__result {
     text-align: right;
 }
 
-.list__item{
-    border-radius: 10px ;
+.list__item {
+    border-radius: 10px;
     height: 30px;
     width: 350px;
     background-color: #1F1E21;
     margin: 10px;
     padding: 20px 15px;
-    color:#fff;
+    color: #fff;
     font-weight: bolder;
     font-size: 15px;
     display: flex;
@@ -104,74 +104,72 @@ body{
     align-items: center;
 }
 
-.list__button{
+.list__button {
     height: 25px;
     width: 70px;
-    color:#fff;
+    color: #fff;
     border-radius: 10px;
-    border:none;
+    border: none;
     color: #000;
     font-weight: 500;
     cursor: pointer;
 }
 
-.box__result{
+.box__result {
     border-top: solid 2px #000;
     font-size: 30px;
 }
 
-.text{
+.text {
     margin-top: 40px;
     margin-bottom: 10px;
     color: #000000;
     font-weight: 400;
-    
+
 }
 
-.footer__title{
+.footer__title {
     font-size: 15px;
     font-weight: 400;
     color: #fff;
 }
 
-@media(max-width:970px){
-    
-    .main{
+@media(max-width:970px) {
+
+    .main {
         flex-direction: column;
     }
-    
+
     .box__number,
-    .box__list{
+    .box__list {
         width: 95vw;
     }
-    
-    svg{
-      margin:50px 0 ;
+
+    svg {
+        margin: 50px 0;
         width: 350px;
     }
 
-    .list__item{
+    .list__item {
         width: 320px;
     }
 }
-@media(max-width:480px){
-    .box__input{
+
+@media(max-width:480px) {
+    .box__input {
         width: 85vw;
     }
 
-    svg{
+    svg {
         width: 270px;
     }
 
-    .list__item{
-        width: 200;
+    .list__item {
+        width: 90%;
     }
-}
-@media(max-width:350px){
 
-    .list__item{
-        width: 250px;
+    .footer__title {
+        padding: 50px 0;
     }
+
 }
-
-
